# esphil-testing

leds/aceptacion/src/: CMakeLists.txt  main.cpp
leds/aceptacion/src/Hardsting/: Hardsting.cpp  Hardsting.hpp
leds/aceptacion/src/Hardsting/framework/: Framework.hpp
leds/aceptacion/src/Hardsting/framework/arduino/: FrameworkArduino.cpp  FrameworkArduino.hpp
leds/aceptacion/src/libreria/: claves.hpp  pasos.cpp  pasos.hpp
leds/aceptacion/test/: CMakeLists.txt  Hardsting_test.cpp  pasos_test.cpp
leds/aceptacion/test/Hardsting/: HardstingTest.cpp
leds/src/: main.cpp
